fix: change z-index control-panel

--- a/museum-dom/src/sass/_welcome.sass
+++ b/museum-dom/src/sass/_welcome.sass
@@ -98,7 +98,7 @@
       grid-template-columns: 76px 182px 80px
       column-gap: 55px
       background-color: $blackBg
-      z-index: 100
+      z-index: 99
     &-counter
       display: flex
       flex-direction: row
